--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "harshal",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^12.13.0"
+    "cypress": "^12.13.0",
+    "cypress-file-upload": "^5.0.8"
   }
 }
